tabla-agregada-en-products-html

--- a/products.html
+++ b/products.html
@@ -38,8 +38,21 @@
   </nav>
   <main class="pb-5 container">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div id="autos">
+        <table>
+          <thead>
+            <tr>
+              <th class="header-image">Imagen</th>
+              <th class="header-name">Nombre</th>
+              <th class="header-description">Descripción</th>
+              <th class="header-price">Precio</th>
+              <th class="header-sold">Cantidad de Vendidos</th>
+            </tr>
+          </thead>
+          <tbody id="tautos">
+          </tbody>
+      </table>
+      <script src="js/products.js"></script>
       </div>
     </div>
   </main>
