Estilos-form-autos

--- a/products.html
+++ b/products.html
@@ -38,8 +38,21 @@
   </nav>
   <main class="pb-5 container">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div id="autos">
+        <table class="table">
+          <thead>
+            <tr>
+              <th class="header-image">Imagen</th>
+                    <th>Nombre</th>
+                    <th>Descripción</th>
+                    <th>Precio</th>
+                    <th>Cantidad de Vendidos</th>
+            </tr>
+          </thead>
+          <tbody id="tautos">
+          </tbody>
+      </table>
+      <script src="js/products.js"></script>
       </div>
     </div>
   </main>
