--- a/login.html
+++ b/login.html
@@ -19,10 +19,24 @@
 <body>
   <main class="mt-5">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div class="loginrec">
+        <h4>¡Bienvenido!</h4> 
+        <form action="" class="login-form">
+          <div class="form-space">
+          <label for="user"></label>
+          <input type="text" id="user" name="Usuario" placeholder="Usuario">
+          <br>
+        </div>
+        <div class="form-space">
+          <label for="password"></label>
+          <input type="password" name="Contraseña" id="password" placeholder="Contraseña">
+          <br>
+        </div>
+          <button type="button" class="btn btn-primary mt-3" onclick="redirigirAInicio()" >Ingresar</button>
+        </form>
       </div>
     </div>
+  </div>
   </main>
   <footer class="text-muted">
     <div class="container">
