--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 <body>
   <main class="mt-5">
     <div class="container">
-      <div class="loginerc">
+      <div class="loginrec">
         <h4>¡Bienvenido!</h4>
         <form action="" class="login-form">
         <div class="form-space">
