peque correccion de css

--- a/products.html
+++ b/products.html
@@ -39,7 +39,7 @@
   <main class="pb-5 container">
     <div class="container">
       <div id="autos">
-        <table class="table">
+        <table>
           <thead>
             <tr>
               <th class="header-image">Imagen</th>
