--- a/login.html
+++ b/login.html
@@ -19,8 +19,9 @@
 <body>
   <main class="mt-5">
     <div class="container">
-      <div class="loginrec">
-        <h4>¡Bienvenido!</h4>
+      <div class="form-container">
+      <h4 class="titulodeform">¡Bienvenido!</h4>
+      
         <form action="" class="login-form">
         <div class="form-space">
           <label for="user"></label>
@@ -34,7 +35,7 @@
         </div>
         <button type="button" class="btn btn-primary mt-3" onclick="redirigirAInicio()" >Ingresar</button>
       </form>
-      </div>
+    </div>
     </div>
   </main>
   <footer class="text-muted">
