--- a/products.html
+++ b/products.html
@@ -32,6 +32,9 @@
           </li>
           <li class="nav-item">
           </li>
+          <li class="nav-item">
+            <span id="user" class="nav-link"></span>
+          </li>
         </ul>
       </div>
     </div>
@@ -48,9 +51,9 @@
               <th class="header-price">Precio</th>
               <th class="header-sold">Cantidad de Vendidos</th>
             </tr>
-          </thead>
-          <tbody id="tautos">
           </tbody>
+          <tbody id="tautos">
+          </thead>
       </table>
       <script src="js/products.js"></script>
       </div>
@@ -75,6 +78,10 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/products.js"></script>
+  <script src="js/login.js"></script>
+  
+
+
 </body>
 
 </html>
