--- a/cart.html
+++ b/cart.html
@@ -31,6 +31,9 @@
           </li>
           <li class="nav-item">
           </li>
+          <li class="nav-item">
+            <span id="user" class="nav-link"></span>
+          </li>
         </ul>
       </div>
     </div>
