--- a/categories.html
+++ b/categories.html
@@ -32,6 +32,9 @@
           </li>
           <li class="nav-item">
           </li>
+          <li class="nav-item">
+            <span id="user-navbar" class="nav-link"></span>
+          </li>
         </ul>
       </div>
     </div>
@@ -100,6 +103,8 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/categories.js"></script>
+  <script src="js/login.js"></script>
+
 </body>
 
 </html>
