--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
-          </li>
+        </li>
+        <li class="nav-item">
+          <span id="user-navbar" class="nav-link"></span>
+        </li>
         </ul>
       </div>
     </div>
@@ -88,6 +90,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/index.js"></script>
   <script src="js/init.js"></script>
+  <script src="js/login.js"></script>
 </body>
 
 </html>
