--- a/product-info.html
+++ b/product-info.html
@@ -32,6 +32,9 @@
           </li>
           <li class="nav-item">
           </li>
+          <li class="nav-item">
+            <span id="user-navbar" class="nav-link"></span>
+          </li>
         </ul>
       </div>
     </div>
