--- a/sell.html
+++ b/sell.html
@@ -31,6 +31,9 @@
           </li>
           <li class="nav-item">
           </li>
+          <li class="nav-item">
+            <span id="user-navbar" class="nav-link"></span>
+          </li>
         </ul>
       </div>
     </div>
@@ -225,6 +228,8 @@
   <script src="js/dropzone.js"></script>
   <script src="js/init.js"></script>
   <script src="js/sell.js"></script>
+  <script src="js/login.js"></script>
+
 </body>
 
 </html>
