Cambios entrega 3 parte 1

--- a/products.html
+++ b/products.html
@@ -41,7 +41,7 @@
   </nav>
   <main class="pb-5 container">
     <div class="container">
-      <div id="autos">
+      <div id="products">
         <table>
           <thead>
             <tr>
@@ -52,7 +52,7 @@
               <th class="header-sold">Cantidad de Vendidos</th>
             </tr>
           </tbody>
-          <tbody id="tautos">
+          <tbody id="tproducts">
           </thead>
       </table>
       <script src="js/products.js"></script>
