--- a/products.html
+++ b/products.html
@@ -2,86 +2,110 @@
 <html lang="es">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>eMercado - Todo lo que busques está aquí</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>eMercado - Todo lo que busques está aquí</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-  <link href="css/font-awesome.min.css" rel="stylesheet">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 justify-content-between">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="categories.html">Categorías</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
-          </li>
-          <li class="nav-item">
-          </li>
-          <li class="nav-item">
-            <span id="user" class="nav-link"></span>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <main class="pb-5 container">
-    <div class="container">
-      <div id="autos">
-        <table>
-          <thead>
-            <tr>
-              <th class="header-image">Imagen</th>
-              <th class="header-name">Nombre</th>
-              <th class="header-description">Descripción</th>
-              <th class="header-price">Precio</th>
-              <th class="header-sold">Cantidad de Vendidos</th>
-            </tr>
-          </tbody>
-          <tbody id="tautos">
-          </thead>
-      </table>
-      <script src="js/products.js"></script>
-      </div>
-    </div>
-  </main>
-  <footer class="text-muted">
-    <div class="container">
-      <p class="float-end">
-        <a href="#">Volver arriba</a>
-      </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
-    </div>
-  </footer>
-  <div id="spinner-wrapper">
-    <div class="lds-ring">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-  </div>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/init.js"></script>
-  <script src="js/products.js"></script>
-  <script src="js/login.js"></script>
-  
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav w-100 justify-content-between">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="categories.html">Categorías</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sell.html">Vender</a>
+                    </li>
+                    <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
+                        <span id="user" class="nav-link"></span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <main class="pb-5 container">
+        <div class="container">
+            <!-- Botones para filtrar por precio asc y desc basado en el categories.html -->
+            <div class="row">
+                <div class="col text-end">
+                    <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
+                        <input type="radio" class="btn-check" name="options" id="sortAsc">
+                        <label class="btn btn-light" for="sortAsc"><i class="fas fa-sort-amount-up mr-1"></i>Precio Asc.</label>
 
+                        <input type="radio" class="btn-check" name="options" id="sortDesc">
+                        <label class="btn btn-light" for="sortDesc"><i class="fas fa-sort-amount-down mr-1"></i>Precio Desc.</label>
 
-</body>
+                        <input type="radio" class="btn-check" name="options" id="sortByCount" checked>
+                        <label class="btn btn-light" for="sortByCount"><i class="fas fa-sort-amount-down mr-1"></i>Rel.</label>
+                    </div>
+                </div>
+            </div>
+            <!-- Para filtrar por precio minimo y maximo tambien basado en el categories.html -->
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-1 container">
+                    <div class="row container p-0 m-0">
+                        <div class="col">
+                            <p class="font-weight-normal text-end my-2">Precio</p>
+                        </div>
+                        <div class="col">
+                            <input class="form-control" type="number" placeholder="min." id="rangeFilterCostMin">
+                        </div>
+                        <div class="col">
+                            <input class="form-control" type="number" placeholder="máx." id="rangeFilterCostMax">
+                        </div>
+                        <div class="col-3 p-0">
+                            <div class="btn-group" role="group">
+                                <button class="btn btn-light btn-block" id="rangeFilterCost">Filtrar</button>
+                                <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Tabla donde se muestran los productos-->
+            <div class="row">
+                <div class="list-group" id="product-list-container">
+                </div>
+            </div>
+                        <!-- En la tabla cambiamos lo que decia autos por products para hacerlo de forma general para todas las categorias -->
 
-</html>
+            <div id="products">
+                <table>
+                    <thead>
+                        <tr>
+                            <th class="header-image">Imagen</th>
+                            <th class="header-name">Nombre</th>
+                            <th class="header-description">Descripción</th>
+                            <th class="header-price">Precio</th>
+                            <th class="header-sold">Cantidad de Vendidos</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tproducts">
+                    </tbody>
+                </table>
+                <script src="js/products.js"></script>
+            </div>
+        </div>
+    </main>
+    <footer class="text-muted">
+        <div class="container">
+            <p class="float-end">
+                <a href="#">Volver arriba</a>
+            </p>
+            <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
