--- a/products.html
+++ b/products.html
@@ -33,7 +33,7 @@
           <li class="nav-item">
           </li>
           <li class="nav-item">
-            <span id="user" class="nav-link"></span>
+            <span id="user-navbar" class="nav-link"></span>
           </li>
         </ul>
       </div>
@@ -51,9 +51,9 @@
               <th class="header-price">Precio</th>
               <th class="header-sold">Cantidad de Vendidos</th>
             </tr>
-          </tbody>
-          <tbody id="tautos">
           </thead>
+          <tbody id="tautos">
+          </tbody>
       </table>
       <script src="js/products.js"></script>
       </div>
