primeros cambios falta css

--- a/product-info.html
+++ b/product-info.html
@@ -40,12 +40,50 @@
     </div>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+   <!-- aca va la tabla para la informacion de los productos-->
+   <div class="container">
+    <div id="product-info">
+      <table id="tinfoprod">  
+        <thead>
+          <tr>
+            <th class="header-name">Nombre</th>  
+          </tr>
+        </thead>
+        <tbody id="tinfo">
+          <tr id="filadecarousel">
+            <td class="header-image"></td>   
+            <td>
+              <div id="productImagesContainer">
+                <button class="carousel-button prev">❮</button>
+                <div id="productImages" class="carousel"></div>
+                <button class="carousel-button next">❯</button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class="header-description">Descripción</td>
+          </tr>
+          <tr class="headerSoldCount">
+            <td>
+              <div class="flex-container">
+                <span class="texto-izq">Categoria</span>
+                <span class="texto-der">Cantidad de vendidos</span>
+              </div>
+            </td>
+          </tr>
+          <tr class="header-category">
+            <td>
+              <div class="flex-container">
+                <span class="texto-izq">Categoria</span>
+                <span class="texto-der">Cantidad de vendidos</span>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <script src="js/product-info.js"></script>
     </div>
-  </main>
+  </div>
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
