cambios finales falta css

--- a/product-info.html
+++ b/product-info.html
@@ -54,7 +54,7 @@
             <td class="header-image"></td>   
             <td>
               <div id="productImagesContainer">
-                <button class="carousel-button prev">❮</button>
+                <button class="carousel-button prev">❮</button>   <!-- Botones para recorrer las fotos-->
                 <div id="productImages" class="carousel"></div>
                 <button class="carousel-button next">❯</button>
               </div>
@@ -63,7 +63,7 @@
           <tr>
             <td class="header-description">Descripción</td>
           </tr>
-          <tr class="headerSoldCount">
+          <tr class="headerSoldCount"> <!--subtitulos de la tabla para mostrar categoria y soldCount-->
             <td>
               <div class="flex-container">
                 <span class="texto-izq">Categoria</span>
