--- a/products.html
+++ b/products.html
@@ -33,7 +33,7 @@
                     <li class="nav-item">
                     </li>
                     <li class="nav-item">
-                        <span id="user" class="nav-link"></span>
+                        <span id="user-navbar" class="nav-link"></span>
                     </li>
                 </ul>
             </div>
@@ -106,6 +106,7 @@
                     </tbody>
                 </table>
                 <script src="js/products.js"></script>
+                <script src="js/login.js"></script>
             </div>
         </div>
     </main>
