correcciones de login

--- a/product-info.html
+++ b/product-info.html
@@ -31,8 +31,6 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-          </li>
-          <li class="nav-item">
             <span id="user-navbar" class="nav-link"></span>
           </li>
         </ul>
@@ -100,10 +98,10 @@
       <div></div>
     </div>
   </div>
+  <script src="js/login.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
-  <script src="login.html"></script>
   
 </body>
 
