Css para la tabla de info products

--- a/product-info.html
+++ b/product-info.html
@@ -44,7 +44,7 @@
       <table id="tinfoprod">  
         <thead>
           <tr>
-            <th class="header-name">Nombre</th>  
+            <th><span class="header-name">Nombre</span></th>  
           </tr>
         </thead>
         <tbody id="tinfo">
@@ -59,7 +59,7 @@
             </td>
           </tr>
           <tr>
-            <td class="header-description">Descripción</td>
+            <td><span class="header-description">Descripción</span></td>
           </tr>
           <tr class="headerSoldCount"> <!--subtitulos de la tabla para mostrar categoria y soldCount-->
             <td>
@@ -69,7 +69,7 @@
               </div>
             </td>
           </tr>
-          <tr class="header-category">
+          <tr class="header-category"><!--Aca se rellenan los datos-->
             <td>
               <div class="flex-container">
                 <span class="texto-izq">Categoria</span>
