correcciones de todas las entregas anteriores

--- a/products.html
+++ b/products.html
@@ -105,6 +105,7 @@
                     <tbody id="tproducts">
                     </tbody>
                 </table>
+                <script src="js/init.js"></script>
                 <script src="js/products.js"></script>
                 <script src="js/login.js"></script>
             </div>
@@ -116,3 +117,7 @@
                 <a href="#">Volver arriba</a>
             </p>
             <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
+        
+            <div id="spinner-wrapper" style="display:none;">Cargando...</div>
+</body>
+</html>
