--- a/product-info.html
+++ b/product-info.html
@@ -90,7 +90,7 @@
           <div id="ratings-list">
             <!-- Aquí se agregarán las calificaciones desde JavaScript -->
           </div>
-          <-- parrafo para agregar la nueva calificacion -->
+          <!-- parrafo para agregar la nueva calificacion -->
           <p id="newCalification"></p> 
           <form id="rating-form">
             <div class="form-group">
