--- a/product-info.html
+++ b/product-info.html
@@ -86,41 +86,43 @@
 
         <!-- Sección de Calificaciones -->
         <div id="ratings-section">
-          <h3>Sección de Calificaciones</h3>
+          <h3 class="titulodeseccion">Calificaciones</h3>
           <div id="ratings-list">
             <!-- Aquí se agregarán las calificaciones desde JavaScript -->
           </div>
-          <!-- parrafo para agregar la nueva calificacion -->
-          <p id="newCalification"></p> 
-          <form id="rating-form">
-            <div class="form-group">
-              <label for="username">Nombre de usuario:</label>
-              <input type="text" id="username" class="form-control" required>
-            </div>
-            <div class="form-group">
-              <label for="comment">Comentario:</label>
-              <textarea id="comment" class="form-control" rows="3" required></textarea>
-            </div>
-            <div class="form-group">
-              <label for="rating">Calificación:</label>
-              <select id="rating" class="form-control" required>
-                <option value="" disabled selected>Selecciona una calificación</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-              </select>
-            </div>
-            <button type="button" id="enviar" class="btn btn-primary">Enviar</button>
-          </form>
-        </div>
+           <h3 class="titulodeseccion">Envia tu calificacion</h3>
+<form id="rating-form">
+  <div class="form-group">
+      <label for="username">Nombre de usuario:</label>
+      <input type="text" id="username" class="form-control" required>
+  </div>
+  <div class="form-group">
+      <label for="comment">Comentario:</label>
+      <textarea id="comment" class="form-control" rows="3" required></textarea>
+  </div>
+  <div class="form-group">
+      <label for="rating">Calificación:</label>
+      <select id="rating" class="form-control" required>
+          <option value="" disabled selected>Selecciona una calificación</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+      </select>
+  </div>
+  <button type="button" id="enviar" class="btn btn-primary">Enviar</button>
+</form>
   
         <!-- Sección de Productos Relacionados -->
         <div id="related-products-section">
-          <h3>Productos Relacionados</h3>
-          <div id="related-products-list" class="row">
-            <!-- Aquí se agregarán los productos relacionados desde JavaScript -->
+          <h3 class="titulodeseccion">Productos Relacionados</h3>
+          <div class="row">
+            <table id="related-products-table">
+              <tbody>
+                  <!-- aca va el html que se genera desde el js-->
+              </tbody>
+          </table>
           </div>
         </div>
 
