corrección del botoncito del form

--- a/product-info.html
+++ b/product-info.html
@@ -111,7 +111,7 @@
           <option value="5">5</option>
       </select>
   </div>
-  <button type="button" id="enviar" class="btn btn-primary">Enviar</button>
+  <button type="button" id="enviar" class="botondelform">Enviar</button>
 </form>
   
         <!-- Sección de Productos Relacionados -->
