--- a/product-info.html
+++ b/product-info.html
@@ -30,9 +30,18 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
-            <span id="user-navbar" class="nav-link"></span>
-          </li>
+          <div class="dropdown">
+            <li class="nav-item">
+              <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"> 
+                <span id="user-navbar" class="nav-link"></span> 
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/cart.html">Mi carrito</a></li>   <!-- Lista del menu despegable -->
+                <li><a class="dropdown-item" href="/my-profile.html">Mi perfil</a></li>
+                <li><a class="dropdown-item" href="/login.html">Cerrar Sesión</a></li>
+              </ul>
+            </li>
+          </div> 
         </ul>
       </div>
     </div>
