--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-            <!-- Entrega 5 inicio-->
+            <!-- Entrega 5 inicio MENU DESPLEGABLE-->
           <div class="dropdown">
             <li class="nav-item dropdown">
-              <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"> 
+              <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false"> 
                 <span id="user-navbar" class="nav-link"></span> 
               </button>
               <ul class="dropdown-menu">
