--- a/sell.html
+++ b/sell.html
@@ -31,18 +31,20 @@
           </li>
           <li class="nav-item">
           </li>
-          <div class="dropdown">
-            <li class="nav-item">
-              <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"> 
-                <span id="user-navbar" class="nav-link"></span> 
-              </button>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/cart.html">Mi carrito</a></li>   <!-- Lista del menu despegable -->
-                <li><a class="dropdown-item" href="/my-profile.html">Mi perfil</a></li>
-                <li><a class="dropdown-item" href="/login.html">Cerrar Sesión</a></li>
-              </ul>
-            </li>
-          </div> 
+                <!-- Entrega 5 inicio MENU DESPLEGABLE-->
+                <div class="dropdown">
+                  <li class="nav-item dropdown">
+                    <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false"> 
+                      <span id="user-navbar" class="nav-link"></span> 
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="/cart.html">Mi carrito</a></li>
+                      <li><a class="dropdown-item" href="/my-profile.html">Mi perfil</a></li>
+                      <li><a class="dropdown-item" href="/login.html">Cerrar Sesión</a></li>
+                    </ul>
+                  </li>
+            </div>
+             <!-- Entrega 5 fin-->
         </ul>
       </div>
     </div>
