--- a/cart.html
+++ b/cart.html
@@ -31,20 +31,20 @@
           </li>
           <li class="nav-item">
           </li>
-               <!-- Entrega 5 inicio MENU DESPLEGABLE-->
-               <div class="dropdown">
-                <li class="nav-item dropdown">
-                  <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false"> 
-                    <span id="user-navbar" class="nav-link"></span> 
-                  </button>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/cart.html">Mi carrito</a></li>
-                    <li><a class="dropdown-item" href="/my-profile.html">Mi perfil</a></li>
-                    <li><a class="dropdown-item" href="/login.html">Cerrar Sesión</a></li>
-                  </ul>
-                </li>
-          </div>
-           <!-- Entrega 5 fin-->
+                  <!-- Entrega 5 inicio MENU DESPLEGABLE-->
+          <div class="dropdown">
+            <li class="nav-item dropdown">
+              <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false"> 
+                <span id="user-navbar" class="nav-link"></span> 
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/cart.html">Mi carrito</a></li>
+                <li><a class="dropdown-item" href="/my-profile.html">Mi perfil</a></li>
+                <li><a class="dropdown-item" href="/login.html">Cerrar Sesión</a></li>
+              </ul>
+            </li>
+      </div>
+       <!-- Entrega 5 fin-->
         </ul>
       </div>
     </div>
@@ -75,6 +75,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/cart.js"></script>
+  <script src="js/login.js"></script>
 </body>
 
 </html>
