subir-imagen-de-perfil

--- a/my-profile.html
+++ b/my-profile.html
@@ -72,6 +72,13 @@
         <div class="profile-pic-container">
           <img src="img/car1.jpg" alt="Foto de perfil" id="profile-pic" width="150">
         </div>
+        <!--Div para subir archivo-->
+        <div class="custom-file">
+          <button id="customButton">Seleccionar archivo</button>
+          <input type="file" id="profileImageInput" style="display:none;">
+          <button id="saveProfileImage">Guardar Imagen</button>
+      </div>
+      
         <div class="container" id="profile-details">
           <div class="fila-profile">
             <strong>Nombre:</strong>
