Co-authored-by: antonella32 <antonella32@users.noreply.github.com>

--- a/product-info.html
+++ b/product-info.html
@@ -43,9 +43,14 @@
                   </ul>
                 </li>
           </div>
-           <!-- Entrega 5 fin-->
+           <!-- Entrega 5 fin DEL DROPDOWN -->
         </ul>
       </div>
+    </div>
+    <!-- ENTREGA 5 PARTE 4 MODO DIA MODO NOCHE-->
+    <div class="form-check form-switch">
+      <input class="form-check-input" type="checkbox" id="modeSwitch">
+      <label class="form-check-label" for="modeSwitch">Modo Noche</label>
     </div>
   </nav>
   <main>
