--- a/my-profile.html
+++ b/my-profile.html
@@ -78,7 +78,7 @@
         </div>
         <!--Div para subir archivo-->
         <div class="custom-file">
-          <button id="customButton">Seleccionar archivo</button>
+          <button  id="customButton">Seleccionar archivo</button>
           <input type="file" id="profileImageInput" style="display:none;">
           <button id="saveProfileImage">Guardar Imagen</button>
       </div>
@@ -117,6 +117,7 @@
       <!-- Div del formulario para modificar los datos -->
       <div id="profile-form" style="display: none;">
         <form action="">
+          <label for="info">Información de perfil</label>
           <label for="name"></label>
           <input type="text" name="nombre" id="name" placeholder="Nombre" required>
           <label for="name"></label>
