--- a/product-info.html
+++ b/product-info.html
@@ -109,8 +109,7 @@
            <h3 class="titulodeseccion">Envia tu calificacion</h3>
 <form id="rating-form">
   <div class="form-group">
-      <label for="username">Nombre de usuario:</label>
-      <input type="text" id="username" class="form-control" required>
+      <label id="username" for="username"></label>
   </div>
   <div class="form-group">
       <label for="comment">Comentario:</label>
