cambios para css

--- a/my-profile.html
+++ b/my-profile.html
@@ -117,7 +117,7 @@
       <!-- Div del formulario para modificar los datos -->
       <div id="profile-form" style="display: none;">
         <form action="">
-          <label for="info">Información de perfil</label>
+          <label id=profile-form-header for="info">Información de perfil</label>
           <label for="name"></label>
           <input type="text" name="nombre" id="name" placeholder="Nombre" required>
           <label for="name"></label>
