correciones de consola

--- a/my-profile.html
+++ b/my-profile.html
@@ -117,10 +117,10 @@
       <!-- Div del formulario para modificar los datos -->
       <div id="profile-form" style="display: none;">
         <form action="">
-          <label id=profile-form-header for="info">Información de perfil</label>
+          <label id="profile-form-header" for="profile-form-header">Información de perfil</label>
           <label for="name"></label>
           <input type="text" name="nombre" id="name" placeholder="Nombre" required>
-          <label for="name"></label>
+          <label for="secondname"></label>
           <input type="text" name="segundo nombre" id="secondname" placeholder="Segundo Nombre">
           <label for="last-name"></label>
           <input type="text" name="apellido" id="last-name" required placeholder="Apellido">
