--- a/cart.html
+++ b/cart.html
@@ -50,11 +50,12 @@
     </div>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
-    </div>
+    <!-- ENTREGA 6!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
+     <div class="container">
+    <div id="cart-items" class="cart-items">
+      <!-- Los productos del carrito se agregarán aquí dinámicamente -->
+  </div>
+</div>
   </main>
   <footer class="text-muted">
     <div class="container">
