cambios entrega 6 falta arreglar

--- a/index.html
+++ b/index.html
@@ -42,12 +42,24 @@
               </ul>
             </li>
       </div>
-       <!-- Entrega 5 fin-->
-        </ul>
-      </div>
+      </ul>
     </div>
+  </div>
+  <div>
+    <button type="button" class="btn btn-primary position-relative">
+      Mi Carrito
+      <span id="cart_count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+        0
+        <span class="visually-hidden">cart-items</span>
+      </span>
+    </button> 
+  </div>
+  <div class="form-check form-switch">
+    <input class="form-check-input" type="checkbox" id="modeSwitch">
+    <label class="form-check-label" for="modeSwitch">Modo Noche</label>
+  </div>
   </nav>
- 
+
   <main>
     <div class="jumbotron text-center"></div>
     <div class="album py-5 bg-light">
@@ -102,6 +114,7 @@
   <script src="js/index.js"></script>
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
+  <script src="js/product-info.js"></script>
 </body>
 
 </html>
