--- a/cart.html
+++ b/cart.html
@@ -44,10 +44,13 @@
               </ul>
             </li>
       </div>
-       <!-- Entrega 5 fin-->
-        </ul>
-      </div>
+      </ul>
     </div>
+  </div>
+  <div class="form-check form-switch">
+    <input class="form-check-input" type="checkbox" id="modeSwitch">
+    <label class="form-check-label" for="modeSwitch">Modo Noche</label>
+  </div>
   </nav>
   <main>
     <!-- ENTREGA 6!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
