--- a/products.html
+++ b/products.html
@@ -45,10 +45,13 @@
               </ul>
             </li>
       </div>
-       <!-- Entrega 5 fin-->
-                </ul>
-            </div>
-        </div>
+    </ul>
+</div>
+</div>
+<div class="form-check form-switch">
+<input class="form-check-input" type="checkbox" id="modeSwitch">
+<label class="form-check-label" for="modeSwitch">Modo Noche</label>
+</div>
     </nav>
     <main class="pb-5 container">
         <div class="container">
