--- a/product-info.html
+++ b/product-info.html
@@ -77,6 +77,10 @@
           <tr>
             <td><span class="header-description">Descripción</span></td>
           </tr>
+            <!--BOTON DE AGREGAR AL CARRITO Y DE COMPRAR !!!! -->
+            <tr>
+              <td><button id="add_to_cart" type="button" >Agregar al carrito</button><button id="go_to_cart" type="button" >Comprar</button></td>
+            </tr>
           <tr class="headerSoldCount"> <!--subtitulos de la tabla para mostrar categoria y soldCount-->
             <td>
               <div class="flex-container">
@@ -164,6 +168,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
+  
   
 </body>
 
