el contador del carrito ya esta en todas las paginas

--- a/product-info.html
+++ b/product-info.html
@@ -47,6 +47,16 @@
         </ul>
       </div>
     </div>
+       <!-- ACA VA LO DEL CARRITO!!!-->
+  <div>
+    <button type="button" class="btn btn-primary position-relative">
+      Mi Carrito
+      <span id="cart_count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+        0
+        <span class="visually-hidden">cart-items</span>
+      </span>
+    </button> 
+  </div>
     <!-- ENTREGA 5 PARTE 4 MODO DIA MODO NOCHE-->
     <div class="form-check form-switch">
       <input class="form-check-input" type="checkbox" id="modeSwitch">
