--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       </ul>
     </div>
   </div>
+   <!-- ACA VA LO DEL CARRITO!!!-->
   <div>
     <button type="button" class="btn btn-primary position-relative">
       Mi Carrito
