--- a/products.html
+++ b/products.html
@@ -48,6 +48,16 @@
     </ul>
 </div>
 </div>
+   <!-- ACA VA LO DEL CARRITO!!!-->
+   <div>
+    <button type="button" class="btn btn-primary position-relative">
+      Mi Carrito
+      <span id="cart_count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+        0
+        <span class="visually-hidden">cart-items</span>
+      </span>
+    </button> 
+  </div>
 <div class="form-check form-switch">
 <input class="form-check-input" type="checkbox" id="modeSwitch">
 <label class="form-check-label" for="modeSwitch">Modo Noche</label>
