algo de cart y css

--- a/cart.html
+++ b/cart.html
@@ -53,9 +53,10 @@
   </div>
   </nav>
   <main>
+    <h4 id="titulo-carrito">Carrito de compras</h4>
     <!-- ENTREGA 6!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
-     <div class="container">
-    <div id="cart-items" class="cart-items">
+     <div class="container" id="cart-container">
+    <div class="container "id="cart-items" class="cart-items">
       <!-- Los productos del carrito se agregarán aquí dinámicamente -->
   </div>
 </div>
