--- a/my-profile.html
+++ b/my-profile.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=shopping_cart_checkout" />
   <style>
     .bd-placeholder-img {
       font-size: 1.125rem;
@@ -63,6 +64,16 @@
         </ul>
       </div>
     </div>
+       <!-- ACA VA LO DEL CARRITO!!!-->
+  <div>
+    <button type="button" class="btn btn-primary position-relative">
+      <span class="material-symbols-outlined">shopping_cart_checkout</span>
+      <span id="cart_count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+        0
+        <span class="visually-hidden">cart-items</span>
+      </span>
+    </button> 
+  </div>
     <div class="form-check form-switch">
       <input class="form-check-input" type="checkbox" id="modeSwitch">
       <label class="form-check-label" for="modeSwitch">Modo Noche</label>
