--- a/product-info.html
+++ b/product-info.html
@@ -10,6 +10,7 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=shopping_cart_checkout" />
 </head>
 
 <body>
@@ -47,6 +48,16 @@
         </ul>
       </div>
     </div>
+       <!-- ACA VA LO DEL CARRITO!!!-->
+  <div>
+    <button type="button" class="btn btn-primary position-relative">
+      <span class="material-symbols-outlined">shopping_cart_checkout</span>
+      <span id="cart_count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+        0
+        <span class="visually-hidden">cart-items</span>
+      </span>
+    </button> 
+  </div>
     <!-- ENTREGA 5 PARTE 4 MODO DIA MODO NOCHE-->
     <div class="form-check form-switch">
       <input class="form-check-input" type="checkbox" id="modeSwitch">
@@ -77,6 +88,10 @@
           <tr>
             <td><span class="header-description">Descripción</span></td>
           </tr>
+            <!--BOTON DE AGREGAR AL CARRITO Y DE COMPRAR !!!! -->
+            <tr>
+              <td><button id="add_to_cart" type="button" >Agregar al carrito</button><button id="go_to_cart" type="button" >Comprar</button></td>
+            </tr>
           <tr class="headerSoldCount"> <!--subtitulos de la tabla para mostrar categoria y soldCount-->
             <td>
               <div class="flex-container">
@@ -164,6 +179,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
+  
   
 </body>
 
