--- a/sell.html
+++ b/sell.html
@@ -9,6 +9,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/dropzone.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=shopping_cart_checkout" />
 </head>
 
 <body>
@@ -48,6 +49,20 @@
         </ul>
       </div>
     </div>
+      <!-- ACA VA LO DEL CARRITO!!!-->
+  <div>
+    <button type="button" class="btn btn-primary position-relative">
+      <span class="material-symbols-outlined">shopping_cart_checkout</span>
+      <span id="cart_count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+        0
+        <span class="visually-hidden">cart-items</span>
+      </span>
+    </button> 
+  </div>
+  <div class="form-check form-switch">
+    <input class="form-check-input" type="checkbox" id="modeSwitch">
+    <label class="form-check-label" for="modeSwitch">Modo Noche</label>
+  </div>
   </nav>
   <div class="container">
     <div class="text-center p-4">
