--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
 </head>
 
 <body>
@@ -21,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Inicio</a>
+            <a class="nav-link" href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="categories.html">Categorías</a>
@@ -29,36 +31,41 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-            <!-- Entrega 5 inicio MENU DESPLEGABLE-->
-          <div class="dropdown">
-            <li class="nav-item dropdown">
-              <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false"> 
-                <span id="user-navbar" class="nav-link"></span> 
-              </button>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/cart.html">Mi carrito</a></li>
-                <li><a class="dropdown-item" href="/my-profile.html">Mi perfil</a></li>
-                <li><a class="dropdown-item" href="/login.html">Cerrar Sesión</a></li>
-              </ul>
-            </li>
+               <!-- Entrega 5 inicio MENU DESPLEGABLE-->
+               <div class="dropdown">
+                <li class="nav-item dropdown">
+                  <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false"> 
+                    <span id="user-navbar" class="nav-link"></span> 
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/cart.html">Mi carrito</a></li>
+                    <li><a class="dropdown-item" href="/my-profile.html">Mi perfil</a></li>
+                    <li><a class="dropdown-item" href="/login.html">Cerrar Sesión</a></li>
+                  </ul>
+                </li>
+          </div>
+           <!-- Entrega 5 fin DEL DROPDOWN -->
+        </ul>
+        <!-- ACA VA LO DEL CARRITO!!!-->
+        <div class="d-flex align-items-center"> <!-- Contenedor para el carrito-->
+          <button id="cartButton" type="button" class="btn btn-primary position-relative me-4">
+              <i class="bi bi-cart"></i> <!-- Icono de carrito -->
+              <span id="cart_count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                  0
+                  <span class="visually-hidden">cart-items</span>
+              </span>
+          </button>
+        </div>
+        <div>
+          <!-- Modo Día/Noche -->
+          <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" id="modeSwitch">
+              <label class="form-check-label" for="modeSwitch">Modo Noche</label>
+          </div>
+        </div>
+        
       </div>
-      </ul>
     </div>
-  </div>
-   <!-- ACA VA LO DEL CARRITO!!!-->
-  <div>
-    <button type="button" class="btn btn-primary position-relative">
-      Mi Carrito
-      <span id="cart_count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-        0
-        <span class="visually-hidden">cart-items</span>
-      </span>
-    </button> 
-  </div>
-  <div class="form-check form-switch">
-    <input class="form-check-input" type="checkbox" id="modeSwitch">
-    <label class="form-check-label" for="modeSwitch">Modo Noche</label>
-  </div>
   </nav>
 
   <main>
