funciona lo de los subtotales

--- a/cart.html
+++ b/cart.html
@@ -98,6 +98,12 @@
             <option value="Transfer">Transferencia bancaria</option> 
            </select>
            </div>
+           <label for="currency-type">Moneda para el total:</label>
+<select id="currency-type">
+    <option value="UYU">UYU</option>
+    <option value="USD">USD</option>
+</select>
+
     
     <div class="form-group">
       <p>Costos</p>
