--- a/cart.html
+++ b/cart.html
@@ -63,6 +63,11 @@
   </div>
   
   <!-- ENTREGA 7!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
+  <div id="empty-cart-message" class="text-center" style="display: none;">
+    <h3>Tu carrito está vacío</h3>
+    <button class="btn btn-primary" onclick="window.location.href='products.html'">Inicia tu compra</button>
+</div>
+
    <!-- Botón para abrir el modal -->
 <button type="button" class="btn btn-primary" id="mostrarModal">
   Finalizar compra
